# James_Webb

./: .gitignore  Cargo.toml  LICENSE  README.md
pyrampfit/: Cargo.toml  example.py  pyproject.toml
pyrampfit/src/: lib.rs
src/: fits.rs  gpu.rs  main.rs  output.rs
