[package]
name = "compare_jwt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "JWST Stage-1 ramp-fit engine (CPU + GPU) in Rust"
repository = "https://github.com/MaxIKweeger/James_Webb"

[dependencies]
bytemuck = "1.25.0"
memmap2 = "0.9.10"
png = "0.18.1"
pollster = "0.4.0"
rayon = "1.12.0"
wgpu = "29.0.3"
