[package]
name = "jwst_rampfit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust-accelerated JWST Stage-1 ramp fitting, callable from Python (drop-in for stcal ramp_fitting)"

# Standalone workspace so it doesn't get pulled into the parent binary's build.
[workspace]

[lib]
name = "jwst_rampfit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1"
